--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="content-body">
             <div class="content">
-                <div id="withdrawal" *ngIf="cadastroCompleto && !respostaSolicitacao && (!reconhecimentoFacialPrimeiroSaque || reconhecimentoFacialPrimeiroSaqueValidado)">
+                <div id="withdrawal" *ngIf="cadastroCompleto && !respostaSolicitacao && (!faceMatchFirstWithdraw || faceMatchFirstWithdrawValidated)">
                     <form [formGroup]="form" (ngSubmit)="onSubmit()">
                         <app-spinner *ngIf="submitting"></app-spinner>
                         <div id="withdrawal-container">
@@ -176,7 +176,7 @@
                 <div class="alert alert-danger" *ngIf="!cadastroCompleto">
                     {{errorMessage}} <a class="btn-link pointer" (click)="completarCadatro()">{{'geral.cliqueAquiParaContinuar' | translate}}.</a>
                 </div>
-                <div #legitimuz id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && reconhecimentoFacialPrimeiroSaque && !reconhecimentoFacialPrimeiroSaqueValidado && !verifiedIdentity">
+                <div #legitimuz id="legitimuz-container" *ngIf="faceMatchEnabled && faceMatchFirstWithdraw && !faceMatchFirstWithdrawValidated && !verifiedIdentity">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
@@ -190,7 +190,7 @@
                     </div>
                     <div id="legitimuz-root"></div>
                 </div>
-                <div #legitimuzLiveness id="legitimuz-container" *ngIf="reconhecimentoFacialEnabled && reconhecimentoFacialPrimeiroSaque && !reconhecimentoFacialPrimeiroSaqueValidado && verifiedIdentity">
+                <div #legitimuzLiveness id="legitimuz-container" *ngIf="faceMatchEnabled && faceMatchFirstWithdraw && !faceMatchFirstWithdrawValidated && verifiedIdentity">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
                             {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
