--- a/src/app/esportes/live/listagem/live-listagem.component.html
+++ b/src/app/esportes/live/listagem/live-listagem.component.html
@@ -168,7 +168,7 @@
                                 class="flag-icon flag-icon-{{campeonato.value.regiao_sigla}} flag-icon-squared"></span>
                             <span class="campeonato-nome">
                                 <ng-template *ngIf="sportId == footballId">{{campeonato.value.regiao}}: </ng-template>
-                                {{campeonato.value.nome}}
+                                {{campeonato.value.regiao | uppercase}}: {{campeonato.value.nome}}
                             </span>
                         </span>
 
