--- a/src/app/shared/layout/banners/banners.component.html
+++ b/src/app/shared/layout/banners/banners.component.html
@@ -1,6 +1,5 @@
-<div *ngIf="!hideBanner" class="banner-container" [ngClass]="{'resolution16x2':pagina === 'deposito','resolution16x4':pagina != 'deposito'}">
     <ng-container *ngIf="!isMobileView || pagina != 'deposito' else isModal">
-        <div *ngIf="banners.length > 0" class="banners" [hidden]="showLoadingIndicator">
+        <div class="banners banner-container" [ngClass]="{'resolution16x2':pagina === 'deposito','resolution16x4':pagina != 'deposito'}" [hidden]="hideBanner">
             <ngb-carousel [showNavigationArrows]="showNavigationArrows">
                 <ng-template *ngFor="let banner of banners" ngbSlide>
                     <div class="picsum-img-wrapper">
@@ -18,7 +17,7 @@
         </div>
     </ng-container>
     <ng-template #isModal>
-        <div *ngIf="bannersModal.length > 0" class="banners" [hidden]="showLoadingIndicator">
+        <div class="banners banner-container" [ngClass]="{'resolution16x2':pagina === 'deposito','resolution16x4':pagina != 'deposito'}" [hidden]="hideModalBanner">
             <ngb-carousel [showNavigationArrows]="showNavigationArrowsInModal">
                 <ng-template *ngFor="let banner of bannersModal" ngbSlide>
                     <div class="picsum-img-wrapper">
@@ -35,4 +34,3 @@
             </ngb-carousel>
         </div>
     </ng-template>
-</div>
